# High_Boost_Filtering

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  High_Boost_Filtering.py  Makefile  README.md  app_streamlit.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: ARQUITETURA.md  CHECKLIST_TECNICO.md  HANDOFF.md  OPERACAO_DEPLOY_MANUTENCAO.md  README.md  ROADMAP.md  TESTES_E_QUALIDADE.md
src/high_boost_filtering/: __init__.py  cli.py  config.py  io_utils.py  pipeline.py  processing.py  quality.py  streamlit_app.py
tests/: test_processing.py  test_quality.py
